force-app/main/default/objects/Manual_Invoice_Line_Item__c/Manual_Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Manual Invoice Line Item</label>
    <nameField>
        <displayFormat>MINVL-{0000000}</displayFormat>
        <label>Manual Invoice Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manual Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>