force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Manual Invoice Line Items</relationshipLabel>
    <relationshipName>Manual_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>