force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/Amount_Payable__c.field-meta.xml
<CustomField>
    <fullName>Amount_Payable__c</fullName>
    <formula>Total_Invoice_Amount__c -  Gross_Amount_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Payable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>