force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/Base_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Base_Amount_Received__c</fullName>
    <label>Base Amount Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>