force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/CGST_Advance_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>CGST_Advance_Amount_Received__c</fullName>
    <formula>ROUND( Base_Amount_Received__c *   CGST_Rate_for_Amount_Received__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST Advance Amount Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>