force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/CGST_Amount_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>CGST_Amount_on_Invoice__c</fullName>
    <formula>ROUND( Invoice_Taxable_Amount__c *  CGST_Rate_for_Invoice_Amount__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST Amount on Invoice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>