force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/CGST_Rate_for_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>CGST_Rate_for_Amount_Received__c</fullName>
    <formula>IF( Account_Classification__c == &apos;Non-SEZ&apos;,
IF(TEXT(Invoice_No__r.Account_Name__r.Primary_State__c) == TEXT(Invoice_No__r.Account_Name__r.Branch__r.State__c) , 0.09,0),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST Rate for Amount Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>