force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/Gross_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Gross_Amount_Received__c</fullName>
    <formula>ROUND(Base_Amount_Received__c ,0) + ROUND(IGST_Advance_Amount_Received__c,0)+ ROUND( SGST_UTGST_Advance_Amount_Received__c,0 ) +  ROUND(CGST_Advance_Amount_Received__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Amount Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>