force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/IGST_Amount_Balance__c.field-meta.xml
<CustomField>
    <fullName>IGST_Amount_Balance__c</fullName>
    <formula>IGST_Amount_on_Invoice__c -  IGST_Advance_Amount_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGST Amount Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>