force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/IGST_Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>IGST_Balance_Amount__c</fullName>
    <label>IGST Balance Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>