force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/IGST_Rate_for_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>IGST_Rate_for_Amount_Received__c</fullName>
    <formula>IF( Account_Classification__c == &apos;Non-SEZ&apos;,
IF(TEXT(Invoice_No__r.Account_Name__r.Primary_State__c) &lt;&gt; TEXT(Invoice_No__r.Account_Name__r.Branch__r.State__c), 0.18,0) 
,IF(Account_Classification__c == &apos;SEZ&apos;,0.18,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGST Rate for Amount Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>