force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/Instruments__c.field-meta.xml
<CustomField>
    <fullName>Instruments__c</fullName>
    <label>Instruments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>