force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount__c</fullName>
    <label>Invoice Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>