force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/Invoice_Taxable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Taxable_Amount__c</fullName>
    <label>Invoice Taxable Amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>