force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/Narration_for_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Narration_for_Invoice__c</fullName>
    <label>Narration for Invoice</label>
    <length>35</length>
    <type>Text</type>
</CustomField>