force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/Particulars_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Particulars_of_Service__c</fullName>
    <label>Particulars of Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>