force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/Period_of_Rating_Fees_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_of_Rating_Fees_From_Date__c</fullName>
    <label>Period of Rating Fees - From Date</label>
    <type>Date</type>
</CustomField>