force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/SAC_HSN_OPE__c.field-meta.xml
<CustomField>
    <fullName>SAC_HSN_OPE__c</fullName>
    <formula>Invoice_No__r.SAC_HSN_OPE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAC/HSN</label>
    <type>Text</type>
</CustomField>