force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/SGST_Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>SGST_Balance_Amount__c</fullName>
    <label>SGST Balance Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>