force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/SGST_UTGST_Advance_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>SGST_UTGST_Advance_Amount_Received__c</fullName>
    <formula>ROUND( Base_Amount_Received__c *  SGST_UTGST_Rate_for_Amount_Received__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST/UTGST Advance Amount Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>