force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/SGST_UTGST_Amount_Balance__c.field-meta.xml
<CustomField>
    <fullName>SGST_UTGST_Amount_Balance__c</fullName>
    <formula>SGST_UTGST_Amount_on_Invoice__c -  SGST_UTGST_Advance_Amount_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST/UTGST Amount Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>