force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/Total_Amount_Invoiced_WF__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Invoiced_WF__c</fullName>
    <label>Total Amount Invoiced WF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>