force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/Total_CGST_Amt__c.field-meta.xml
<CustomField>
    <fullName>Total_CGST_Amt__c</fullName>
    <description>CGST Rate for Invoice Amount Copy and rollup on Invoice used in reports</description>
    <label>Total CGST Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>