force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/Total_IGST_Amt_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_IGST_Amt_Received__c</fullName>
    <label>Total IGST Amt Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>