force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/Total_Invoice_Amount_Copy__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Amount_Copy__c</fullName>
    <label>Total Invoice Amount_Copy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>