force-app/main/default/objects/Manual_Invoice_Line_Item__c/fields/Total_SGST_Invoice_Amt__c.field-meta.xml
<CustomField>
    <fullName>Total_SGST_Invoice_Amt__c</fullName>
    <label>Total SGST Invoice Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>